--- a/index.html
+++ b/index.html
@@ -73,16 +73,14 @@
             
     </form>
 
-    <!-- <form class='flex-container'>
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-    </form> -->
+    <form class='articulos'>
+        <div>Código</div>
+        <div>Descripción</div>
+        <div>Cantidad</div>
+        <div>Precio</div>
+        <div>Total</div>
+        <div>Acción</div>
+    </form>
 
 
 
